<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kmutt.senior.pet.activity.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/book"
            android:layout_width="@dimen/iv_about_width"
            android:layout_height="@dimen/iv_about_width"
            android:layout_gravity="center"
            android:src="@drawable/book"
            android:tintMode="add" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_about_book"
            android:layout_gravity="center"
            android:padding="@dimen/tv_about_padding"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pai"
            android:layout_width="@dimen/iv_about_width"
            android:layout_height="@dimen/iv_about_width"
            android:layout_gravity="center"
            android:src="@drawable/pai"
            android:tintMode="add"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_about_pai"
            android:layout_gravity="center"
            android:padding="@dimen/tv_about_padding"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/yai"
            android:layout_width="@dimen/iv_about_width"
            android:layout_height="@dimen/iv_about_width"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/yai"
            android:tintMode="add" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_about_yai"
            android:layout_gravity="center"
            android:padding="@dimen/tv_about_padding"/>

    </LinearLayout>

</RelativeLayout>
