<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmutt.senior.pet.activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/pic_bg" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_width"
                    android:layout_marginTop="@dimen/logo_margin"
                    android:src="@drawable/ic_logo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/logo_name"
                    android:textColor="@color/activity_intro_text_color"
                    android:textSize="@dimen/logo_name_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnPair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/btn_pair_margin_bottom"
                    android:background="@drawable/btn_pair"
                    android:text="@string/btn_pair"
                    android:textColor="@color/activity_intro_text_color" />

                <Button
                    android:id="@+id/btnDog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/btn_pet_margin_bottom"
                    android:background="@drawable/btn_pet"
                    android:text="@string/btn_dog"
                    android:textColor="@color/activity_intro_text_color" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</FrameLayout>
